--- a/Floating Elements/index.html
+++ b/Floating Elements/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Floating Elements</title>
-  <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Floating Elements</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body >
 <h2>Float Next To Each Other</h2>
